@@ -1,16 +1,17 @@
 package tr.com.infumia.terminable;
 
+import java.util.Arrays;
 import java.util.List;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import lombok.experimental.FieldDefaults;
 import org.jetbrains.annotations.NotNull;
 
 /**
  * an interface to determine terminable module collection.
  */
 public interface TerminableModuleCollection extends TerminableModule {
+
   /**
    * gets the modules.
    *
@@ -31,14 +32,18 @@ public interface TerminableModuleCollection extends TerminableModule {
    */
   @Getter
   @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
-  @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
   abstract class Base implements TerminableModuleCollection {
 
     @NotNull
-    List<TerminableModule> modules;
+    private final List<TerminableModule> modules;
 
+    /**
+     * ctor.
+     *
+     * @param modules The modules to bind.
+     */
     protected Base(@NotNull final TerminableModule... modules) {
-      this(List.of(modules));
+      this(Arrays.asList(modules));
     }
   }
 }
